eksnode/src/containerd/snapshots/eksnode__containerd__tests__it_creates_containerd_config-2.snap
---
source: eksnode/src/containerd/mod.rs
expression: buf
---
"version = 2\nroot = \"/var/lib/containerd\"\nstate = \"/run/containerd\"\ndisabled_plugins = [\n    \"io.containerd.internal.v1.opt\",\n    \"io.containerd.snapshotter.v1.aufs\",\n    \"io.containerd.snapshotter.v1.devmapper\",\n    \"io.containerd.snapshotter.v1.native\",\n    \"io.containerd.snapshotter.v1.zfs\",\n]\n\n[grpc]\naddress = \"/run/containerd/containerd.sock\"\n\n[plugins.\"io.containerd.grpc.v1.cri\"]\nsandbox_image = \"602401143452.dkr.ecr.us-east-1.amazonaws.com/eks/pause:3.8\"\n\n[plugins.\"io.containerd.grpc.v1.cri\".cni]\nbin_dir = \"/opt/cni/bin\"\nconf_dir = \"/etc/cni/net.d\"\n\n[plugins.\"io.containerd.grpc.v1.cri\".containerd]\ndefault_runtime_name = \"runc\"\ndiscard_unpacked_layers = true\n\n[plugins.\"io.containerd.grpc.v1.cri\".containerd.runtimes.runc]\nruntime_type = \"io.containerd.runc.v2\"\n\n[plugins.\"io.containerd.grpc.v1.cri\".containerd.runtimes.runc.options]\nSystemdCgroup = true\n\n[plugins.\"io.containerd.grpc.v1.cri\".registry]\nconfig_path = \"/etc/containerd/certs.d:/etc/docker/certs.d\"\n"
